Refactor action.yml with updates and enhancements
Refactor action.yml for improved clarity and functionality.

--- a/action.yml
+++ b/action.yml
@@ -23,13 +23,15 @@ inputs:
     description: 'Mention trigger (default: @goose)'
     required: false
     default: '@goose'
+
 runs:
   using: 'composite'
   steps:
     - name: Checkout repo
       uses: actions/checkout@v4
       with:
-        fetch-depth: 0  # For full history/diffs
+        fetch-depth: 0 # For full history/diffs
+
     - name: Gather Event Info (if applicable)
       if: github.event_name == 'pull_request' || github.event_name == 'issue_comment'
       shell: bash
@@ -39,7 +41,6 @@ runs:
           ISSUE_NUMBER=${{ github.event.issue.number }}
         elif [[ "${{ github.event_name }}" == "pull_request" ]]; then
           ISSUE_NUMBER=${{ github.event.pull_request.number }}
-          # Gather changes like in docs
           {
             echo "# Files Changed"
             gh pr view $ISSUE_NUMBER --json files -q '.files[] | "* " + .path + " (" + (.additions|tostring) + " additions, " + (.deletions|tostring) + " deletions)"'
@@ -49,12 +50,13 @@ runs:
           } > changes.txt
           INSTRUCTIONS="Summarize and review the following changes:\n$(cat changes.txt)"
         else
-          ISSUE_NUMBER=${{ github.event.issue.number }}  # Fallback
+          ISSUE_NUMBER=${{ github.event.issue.number }}
           INSTRUCTIONS="${{ inputs.instructions }}"
         fi
         echo "INSTRUCTIONS=$INSTRUCTIONS" >> $GITHUB_ENV
         echo "ISSUE_NUMBER=$ISSUE_NUMBER" >> $GITHUB_ENV
-        echo "BASE_BRANCH=${{ github.ref_name }}" >> $GITHUB_ENV  # e.g., main
+        echo "BASE_BRANCH=${{ github.ref_name }}" >> $GITHUB_ENV
+
     - name: Install Goose CLI
       shell: bash
       run: |
@@ -62,6 +64,7 @@ runs:
         curl -fsSL https://github.com/block/goose/releases/download/stable/download_cli.sh \
           | CONFIGURE=false GOOSE_BIN_DIR=/home/runner/.local/bin bash
         echo "/home/runner/.local/bin" >> $GITHUB_PATH
+
     - name: Configure Goose
       shell: bash
       run: |
@@ -71,11 +74,13 @@ runs:
         GOOSE_MODEL: ${{ inputs.openai_model }}
         keyring: false
         EOF
+
     - name: Setup Git for Commits
       shell: bash
       run: |
         git config --global user.name "Goose Bot"
         git config --global user.email "goose@users.noreply.github.com"
+
     - name: Create Instructions File
       shell: bash
       run: |
@@ -84,6 +89,7 @@ runs:
         /builtin developer
         Execute the following task using shell commands for all Git operations. Create a new branch first with 'git checkout -b goose-task-$(date +%s)'. After making changes and committing, push with 'git push origin HEAD'. Then create the PR with 'gh pr create --title "Goose: ${{ env.INSTRUCTIONS }}" --body "Automated changes by Goose" --base ${{ env.BASE_BRANCH }}'. Task: ${{ env.INSTRUCTIONS }}
         EOF
+
     - name: Create Initial Progress Comment
       if: env.ISSUE_NUMBER != ''
       shell: bash
@@ -93,6 +99,7 @@ runs:
         COMMENT_BODY='Goose processing:\n- [ ] Installing and configuring\n- [ ] Running task\n- [ ] Posting results'
         COMMENT_ID=$(gh api repos/${{ github.repository }}/issues/${{ env.ISSUE_NUMBER }}/comments -f body="$COMMENT_BODY" --jq .id)
         echo "COMMENT_ID=$COMMENT_ID" >> $GITHUB_ENV
+
     - name: Update Progress - Configured
       if: env.COMMENT_ID != ''
       shell: bash
@@ -100,12 +107,13 @@ runs:
         GITHUB_TOKEN: ${{ inputs.github_token }}
       run: |
         gh api repos/${{ github.repository }}/issues/comments/${{ env.COMMENT_ID }} -X PATCH -f body='Goose processing:\n- [x] Installing and configuring\n- [ ] Running task\n- [ ] Posting results'
+
     - name: Run Goose
       shell: bash
       env:
         OPENAI_API_KEY: ${{ inputs.openai_api_key }}
         OPENAI_HOST: ${{ inputs.openai_host }}
-        GITHUB_TOKEN: ${{ inputs.github_token }}  # Add for gh and git auth
+        GITHUB_TOKEN: ${{ inputs.github_token }}
       run: |
         goose run --instructions instructions.txt --no-session --with-builtin developer ${{ inputs.goose_args }} | \
           sed -E 's/\x1B\[[0-9;]*[mK]//g' | \
@@ -114,29 +122,16 @@ runs:
           grep -v "^Closing session" | \
           sed 's/[[:space:]]*$//' \
           > output.txt
-    - name: Update Progress - Task Run
+
+    - name: Update Progress - Task Run (with Details)
       if: env.COMMENT_ID != ''
       shell: bash
       env:
         GITHUB_TOKEN: ${{ inputs.github_token }}
       run: |
-        gh api repos/${{ github.repository }}/issues/comments/${{ env.COMMENT_ID }} -X PATCH -f body='Goose processing:\n- [x] Installing and configuring\n- [x] Running task\n- [ ] Posting results'
-    - name: Fallback Commit and PR Creation (if changes detected)
-      shell: bash
-      env:
-        GITHUB_TOKEN: ${{ inputs.github_token }}
-      run: |
-        git fetch origin
-        if ! git diff --quiet || [ $(git rev-list HEAD...origin/${{ env.BASE_BRANCH }} --count) -gt 0 ]; then
-          BRANCH_NAME="goose-task-$(date +%s)"
-          git checkout -b $BRANCH_NAME || true  # If already on new branch
-          git add . || true
-          git commit -m "Goose automated changes: ${{ env.INSTRUCTIONS }}" || echo "No new changes to commit."
-          git push origin $BRANCH_NAME
-          gh pr create --title "Goose: ${{ env.INSTRUCTIONS }}" --body "Automated changes by Goose based on instructions." --base ${{ env.BASE_BRANCH }}
-        else
-          echo "No changes or unpushed commits detected; skipping."
-        fi
+        MILESTONES=$(grep -E '───|Great!|Successfully|I've successfully' output.txt | sed 's/^/ - /' || echo "No milestones detected.")
+        gh api repos/${{ github.repository }}/issues/comments/${{ env.COMMENT_ID }} -X PATCH -f body="Goose processing (live log):\n\n$MILESTONES\n\nProgress:\n- [x] Installing and configuring\n- [x] Running task\n- [ ] Posting results"
+
     - name: Post Final Results
       if: env.ISSUE_NUMBER != ''
       shell: bash
@@ -144,7 +139,13 @@ runs:
         GITHUB_TOKEN: ${{ inputs.github_token }}
       run: |
         RESULT=$(cat output.txt)
-        gh api repos/${{ github.repository }}/issues/comments/${{ env.COMMENT_ID }} -X PATCH -f body="Goose results:\n\n$RESULT\n\nProgress:\n- [x] Installing and configuring\n- [x] Running task\n- [x] Posting results"
+        PR_URL=$(echo "$RESULT" | grep -oE 'https://github\.com/[^/]+/[^/]+/pull/[0-9]+' | head -1)
+        PR_TAG=$(echo "$PR_URL" | grep -oE '[0-9]+$' || echo "")
+        if [ -n "$PR_URL" ] && [ -n "$PR_TAG" ]; then
+          RESULT="$RESULT\n\n**Linked PR:** [#$PR_TAG]($PR_URL)"
+        fi
+        gh api repos/${{ github.repository }}/issues/comments/${{ env.COMMENT_ID }} -X PATCH -f body="Goose results:\n\n\`\`\`\n$RESULT\n\`\`\`\n\nProgress:\n- [x] Installing and configuring\n- [x] Running task\n- [x] Posting results"
+
     - name: Output Results (for non-issue events)
       if: env.ISSUE_NUMBER == ''
       shell: bash
